Fix to spacing and mobile-view

--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ form {
   width: 500px;
   /* Form outline */
   padding: 1em;
-  border: 1px solid #ccc;
+  border: 5px solid whitesmoke;
   border-radius: 1em;
   display: none;
   transition: ease-in-out 0.3s;
@@ -174,24 +174,16 @@ form li + li {
 }
 
 ul label {
-  /* Uniform size & alignment */
   display: inline-block;
   width: 130px;
   text-align: right;
   letter-spacing: 1px;
 }
 
-input,
+ul input,
 textarea {
-  /* To make sure that all text fields have the same font settings
-     By default, textareas have a monospace font */
-  font: 1em sans-serif;
-
-  /* Uniform text field size */
   width: 350px;
   box-sizing: border-box;
-
-  /* Match form field borders */
   border: 1px solid #999;
   border-radius: 5px;
   padding: 0.5rem;
@@ -199,7 +191,6 @@ textarea {
 
 input:focus,
 textarea:focus {
-  /* Additional highlight for focused elements */
   border-color: #000;
 }
 
@@ -211,4 +202,50 @@ textarea:focus {
   border: none;
   border-radius: 15px;
   padding: 1rem;
+}
+
+@media screen and (max-width: 769px) {
+  header {
+    padding: 0;
+  }
+
+  h1 {
+    font-size: 1.2rem;
+  }
+
+  .container {
+    padding: 1rem;
+    margin: 0 auto;
+    text-align: center;
+  }
+
+  .card {
+    width: 150px;
+    height: 200px;
+    padding: 0.5rem;
+  }
+
+  .card::before {
+    content: "";
+    position: absolute;
+    left: -6px;
+    border-radius: 2px;
+    background-color: black;
+    width: 8px;
+    height: 200px;
+  }
+
+  form {
+    width: 300px;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
+  ul input {
+    width: 200px;
+  }
+
+  ul label {
+    text-align: center;
+  }
 }
